# redactpack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKPOINTS.md  CHECKPOINT_1_INTERNAL_REVIEW.md  CHECKPOINT_2_FIXES_AFTER_FABLE_FAIL.md  CHECKPOINT_2_INTERNAL_REVIEW.md  CHECKPOINT_3_INTERNAL_REVIEW.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  CROSS_PLATFORM_REPORT.md  DECISIONS.md  EXTERNAL_REVIEW_CHECKPOINT_1_RESULT.md  EXTERNAL_REVIEW_CHECKPOINT_2_REREVIEW_RESULT.md  EXTERNAL_REVIEW_CHECKPOINT_2_RESULT.md  EXTERNAL_REVIEW_CHECKPOINT_3_POSTFIX_RESULT.md  EXTERNAL_REVIEW_CHECKPOINT_3_RESULT.md  EXTERNAL_REVIEW_PACKET_CHECKPOINT_1.md  EXTERNAL_REVIEW_PACKET_CHECKPOINT_2.md  EXTERNAL_REVIEW_PACKET_CHECKPOINT_3.md  FINAL_REVIEW.md  FINAL_SUMMARY.md  GOAL.md  IDEA_SCORECARD.md  IMPLEMENTATION_PLAN.md  INSTALLATION_PLAN.md  LICENSE  MARKET_RESEARCH.md  MVP_SCOPE.md  PERFORMANCE_NOTES.md  PROBLEM_STATEMENT.md  PRODUCT_SPEC.md  README.md  REJECTED_IDEAS.md  RELEASE_CHECKLIST.md  REVIEW_LOG.md  RISK_REGISTER.md  ROADMAP.md  SECURITY.md  SECURITY_PRIVACY.md  (+7 more)
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-10-redactpack-implementation.md
docs/superpowers/specs/: 2026-06-10-redactpack-design.md
examples/: redactpack.policy.json
examples/sample-bundle/: config.env
src/redactpack/: __init__.py  benchmark.py  cli.py  detectors.py  models.py  policy.py  redactor.py  reports.py  scanner.py
tests/: test_benchmark.py  test_cli.py  test_detectors.py  test_models.py  test_policy.py  test_redactor.py  test_scanner_reports.py
tests/fixtures/: corpus.json
(+1 files in other folders)
